--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "react-dom": "^17.0.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^8.0.0",
     "socket.io-client": "^3.1.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
