--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@ant-design/icons": "^5.2.6",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fancyapps/ui": "^5.0.23",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.11",
     "@mui/joy": "^5.0.0-beta.8",
@@ -57,8 +58,8 @@
   },
   "devDependencies": {
     "@types/css-modules": "^1.0.3",
-    "@types/lodash": "^4.14.199",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.14.199",
     "@types/node": "^16.18.51",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
