--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "mdb-ui-kit": "^6.4.2",
     "moment": "^2.29.4",
     "primereact": "^10.0.2",
-    "query-string": "^6.13.8",
+    "query-string": "^6.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^8.0.0",
     "react-use": "^17.4.0",
     "socket.io-client": "^3.1.0",
@@ -61,6 +62,7 @@
     "@types/jest": "^27.5.2",
     "@types/lodash": "^4.14.199",
     "@types/node": "^16.18.51",
+    "@types/query-string": "^6.3.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "lodash": "^4.17.21",
